--- a/src/App.css
+++ b/src/App.css
@@ -59,8 +59,9 @@ body {
 /* App Container */
 
 .app-container {
-  display: flex;
-  flex: 1;
+ display: flex;
+  width: 100%;
+  height: 100vh;
 }
 
 
@@ -70,7 +71,7 @@ body {
   background-color: var(--tertiary-bg);
   display: flex;
   flex-direction: column;
-  padding-top: var(--header-height);
+  padding-top: 0; /* Remove extra padding */
   transition: width 0.3s ease;
 }
 
@@ -164,7 +165,7 @@ body {
   display: flex;
   flex-direction: column;
   flex: 1;
-  padding: 20px;
+  padding: 0;
   overflow-y: auto;
   overflow-y: auto;
 }
